test/invalid/baseline/caller.txt
Syntax error at line 6 in caller.webidl, since `interface NumberQuadrupler`:
  legacycaller float compute(float x
               ^ Invalid operation
